# gitleaks_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.py  docker-compose.yml  gitleaks.toml  hello.py  pyproject.toml  qr_gen.py  rem.txt  requirements.txt  scan_repos.py  secretsecret.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: echo_secret.yml  main.yml  run_script.yml
html/: index.html
