[tool.poetry]
name = "gitleaks_demo"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
bs4 = "^0.0.1"
pandas = "^1.4.0"
playwright = "^1.18.1"
requests-cache = "^0.9.1"
GitPython = "^3.1.26"
Flask = "^2.1.3"
boto3 = "^1.24.42"
PyQRCode = "^1.2.1"
pypng = "^0.20220715.0"
sh = "^1.14.3"
tinydb = "^4.7.0"
python-decouple = "^3.6"
pyee = "^9.0.4"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
